JWT 인증 + Notice CRUD 추가 (AI TDD 검증 시나리오 확장)
- Spring Security + JWT(jjwt 0.11.5) 인증 레이어 구현
  - JwtTokenProvider, JwtAuthenticationFilter, SecurityConfig
  - AuthService/AuthController: 로그인(토큰 발급), 회원가입(BCrypt)
- Notice CRUD 도메인 추가 (Controller → Service → Mapper)
- GlobalExceptionHandler로 예외 처리 중앙화 (5개 예외 통합)
- DB 스키마: users.role 컬럼 추가, notices 테이블 신규
- data.sql: BCrypt 비밀번호, 공지사항 샘플 3건
- 테스트 전용 application.yml 생성
- CLAUDE.md 작업 이력 및 패키지 구조 업데이트

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>